--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   uuid: ^4.2.2
+  hydrated_bloc: ^9.1.3
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
