--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   uuid: ^4.2.2
   hydrated_bloc: ^9.1.3
   path_provider: ^2.1.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
